feat: fix minor issues
